2002-06-07  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/general.m4 (_AC_INIT_DEFAULTS): Initialize
	ac_config_libobj_dir.
	(AC_CONFIG_LIBOBJ_DIR): New.
	* lib/autoconf/functions.m4 (_AC_FUNC_FNMATCH): Split into...
	(_AC_FUNC_FNMATCH_IF, _AC_LIBOBJ_FNMATCH): these.
	Use ac_config_libobj_dir to find the replacement files.
	(AC_FUNC_FNMATCH, AC_FUNC_FNMATCH_GNU): Split into...
	(AC_FUNC_FNMATCH, AC_FUNC_FNMATCH_GNU, AC_REPLACE_FNMATCH)
	(AC_REPLACE_FNMATCH_GNU): these.
	(AC_FUNC_GETLOADAVG): Use ac_config_libobj_dir.
	* doc/autoconf.texi (Particular Functions, Generic Functions): Adjust.
	* tests/mktests.sh (ac_exclude_list): Don't check
	AC_FUNC_GETLOADAVG as it requires getloadavg.c which is not shipped.

2002-06-06  Paul Eggert  <eggert@twinsun.com>

	* lib/autoconf/status.m4 (_AC_OUTPUT_LINKS): Fall back on cp
	if ln doesn't work.
	* NEWS: Likewise.
	* doc/autoconf.texi (Configuration Links): Likewise.
	(Limitations of Usual Tools): Prefer $(LN_S) to ln -s || ln.

2002-06-05  Paul Eggert  <eggert@twinsun.com>

	* config/config.guess, config/config.sub, config/texinfo.tex:
	Update from masters.

2002-05-29  Paul Eggert  <eggert@twinsun.com>

	* bin/autom4te.in ($m4): Do not assume that egrep and fgrep exist.
	* lib/autoconf/c.m4 (AC_C_BIGENDIAN): Likewise.
	* lib/autoconf/general.m4 (_AC_RUN_LOG_STDERR, AC_EGREP_CPP):
	Likewise.
	* lib/autoconf/Makefile.am (check-local): Likewise.
	* lib/autoconf/status.m4 (AC_CONFIG_HEADER): Likewise.
	* lib/autoconf/types.m4 (commentary only): Likewise.
	* lib/autotest/general.m4 (AT_INIT, AT_CHECK): Likewise.
	* lib/autotest/Makefile.am (check-local): Likewise.
	* lib/m4sugar/Makefile.am (check-local): Likewise.
	* tests/atspecific.m4 (AT_CONFIGURE_AC, AT_CHECK_DEFINES): Likewise.
	* tests/mktests.sh (egrep): New var; use it instead of plain egrep.

	* lib/autoconf/programs.m4 (AC_PROG_EGREP, AC_PROG_FGREP): New macros.
	* doc/autoconf.texi (Particular Programs): Document them.