@@ -8,6 +8,7 @@ Aharon Robbins              arnold@gnu.org
 Akim Demaille               akim@freefriends.org
 Akinori Musha               knu@iDaemons.org
 Alain Knaff                 Alain.Knaff@imag.fr
+Adam J. Richter             adam@yggdrasil.com
 Alec Wolman                 wolman@cs.washington.edu
 Alexandre Duret-Lutz        duret_g@epita.fr
 Alexandre Oliva             oliva@lsd.ic.unicamp.br
